# example/taskboard/gen/protobridge/openapi.yaml
@@ -161,24 +161,6 @@ paths:
           description: Unauthorized
         '422':
           description: Validation Error
-  /health:
-    get:
-      operationId: HealthService_GetHealth
-      tags:
-        - System
-      responses:
-        '200':
-          description: Successful response
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/HealthResponse'
-        '400':
-          description: Bad Request
-        '401':
-          description: Unauthorized
-        '422':
-          description: Validation Error
 components:
   schemas:
     CreateTaskRequest:
@@ -342,13 +324,3 @@ components:
           type: string
         sender:
           type: string
-    HealthRequest:
-      type: object
-    HealthResponse:
-      type: object
-      properties:
-        status:
-          type: string
-        task_count:
-          type: integer
-          format: int64
